# microfmt

./: .gitignore  CMakeLists.txt  Makefile  README.md  sonar-project.properties
.github/workflows/: build.yml  sonarlint.yml  test.yml
include/: microfmt.hpp
test/: CMakeLists.txt  bench.cpp  example.cpp  unittests.cpp
